--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,7 +9,28 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
+  
+
   <body>
+
+     <nav>
+      <ul>
+        <li id='to-left'>
+          <p><a href='/'>Home</a></p>
+        </li>
+        <li id='to-right'>
+          <p><a href='/signup'>Signup</a></p>
+        </li>
+        <li id='to-right'>
+          <p><a href='/login'>Login</a></p>
+        </li>
+        <li id='to-right'>
+          <p><a href='/profile'>Profile</a></p>
+        </li>
+        <form action='/logout' method='post'>
+          <button>Logout</button></form>
+      </ul>
+    </nav>
 
     {{{body}}}
 
